--- a/reports.css
+++ b/reports.css
@@ -15,8 +15,9 @@ h1 {
 }
 
 .white{
+    font-family:'Raleway',sans-serif;
     color:#fff;
-    font-weight: 500;
+    font-weight: 600;
     padding-bottom: 0;
 }
 
@@ -54,7 +55,7 @@ p + img{
 
 .figcaption{
     color:#686868;
-    font-size:.875rem;
+    font-size:.75rem;
     line-height:1.25rem;
     margin-top:0rem;
 }
